changed css to fix square alignment

--- a/Week3/Day4/Exercises/Coloring-Game/style.css
+++ b/Week3/Day4/Exercises/Coloring-Game/style.css
@@ -9,22 +9,6 @@ body {
 
 button {
   background-color: white;
-  width: 100%;
-}
-
-#squareAmountBtn {
-  grid-column: 1 / 2;
-
-}
-
-#clearBtn {
-  grid-column: 2 / 3;
-
-}
-
-
-#eraserBtn {
-  grid-column: 3 / 4;
 }
 
 .grid-right,
@@ -43,7 +27,6 @@ button {
 
 .grid-left > div {
   border: 1px solid black;
-  width: 95%;
 }
 
 .grid-right {
